# react-native-chromaflow

./: .gitignore  .gitmodules  NitroChromaflow.podspec  README.md  nitro.json  package-lock.json  package.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/chromaflow/: NitroChromaflowPackage.kt
cpp/: HybridChromaFlow.cpp  HybridChromaFlow.hpp  chromaflow_wasm.c
ios/: Bridge.h
scripts/: setup.js
src/: index.ts
src/specs/: ChromaFlow.nitro.ts  Chromaflow.nitro.ts
